--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,10 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="card_padding">45dp</dimen>
     <dimen name="card_top_bottom_padding">15dp</dimen>
+    <dimen name="text_size">25dp</dimen>
+    <dimen name="margin_5dp">5dp</dimen>
+    <dimen name="margin_10dp">10dp</dimen>
+    <dimen name="card_corner_radius">4dp</dimen>
+    <dimen name="card_height">200dp</dimen>
+    <dimen name="blank_layout">70dp</dimen>
 </resources>
