--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,9 @@
     <dimen name="card_corner_radius">4dp</dimen>
     <dimen name="card_height">200dp</dimen>
     <dimen name="blank_layout">70dp</dimen>
+    <dimen name="emoji_size">75dp</dimen>
+    <dimen name="margin_20dp">20dp</dimen>
+    <dimen name="emoji_text_size">10sp</dimen>
+
+
 </resources>
