--- a/app/src/main/res/layout/book_readed_popup.xml
+++ b/app/src/main/res/layout/book_readed_popup.xml
@@ -26,16 +26,72 @@
             android:layout_height="50dp"
             android:background="@android:color/background_light"/>
     </RelativeLayout>-->
+    <LinearLayout
+        android:orientation="horizontal"
+        android:id="@+id/linear"
+        android:layout_width="match_parent"
+        android:layout_height="60dp">
 
-    <TextView
-        android:id="@+id/book_title"
-        style="@style/TextAppearance.AppCompat.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="BookTitle"
-        android:layout_marginBottom="@dimen/margin_10dp"
-        android:layout_marginTop="@dimen/margin_10dp"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:gravity="start">
+
+            <ImageButton
+                android:id="@+id/close_arrow"
+                android:background="@color/cardview_light_background"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:src="@drawable/ic_close_arrow"/>
+
+        </LinearLayout>
+
+        <!--<TextView
+            android:id="@+id/book_title"
+            style="@style/TextAppearance.AppCompat.Title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="BookTitle"
+            android:layout_marginBottom="@dimen/margin_10dp"
+            android:layout_marginTop="@dimen/margin_10dp"/>-->
+
+        <TextView
+            style="@style/TextAppearance.AppCompat.Title"
+            android:id="@+id/info_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="BookTitle"
+            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textColor="@color/colorBlack"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_gravity="center_vertical"/>
+
+        <!--<LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/linearLayout"
+            android:gravity="end">
+
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:background="@drawable/roudend_image_button"
+                android:layout_gravity="center_vertical"
+                android:layout_marginEnd="@dimen/margin_10dp"
+                android:layout_marginTop="@dimen/margin_10dp"
+                android:src="@drawable/ic_add_book"/>
+
+
+        </LinearLayout>-->
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -46,7 +102,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/emoji_text_size"
+            android:textSize="@dimen/rate_popup_subtitles_size"
             android:text="@string/rate_it_sentence"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
@@ -249,7 +305,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/emoji_text_size"
+            android:textSize="@dimen/rate_popup_subtitles_size"
             android:text="@string/feeling_sentecte"
             android:textStyle="bold"
             android:textColor="@color/colorBlack"
@@ -273,6 +329,17 @@
                 android:layout_marginBottom="@dimen/margin_20dp"
                 android:layout_marginStart="@dimen/margin_10dp"
                 android:layout_marginEnd="@dimen/margin_10dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="bottom|center_horizontal"
+                        android:text="-"/>
+                </LinearLayout>
 
                 <androidx.cardview.widget.CardView
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
@@ -530,23 +597,18 @@
             </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_reviews"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_gravity="center_horizontal">
+            app:cardBackgroundColor="@color/colorGrayCardBackground"
+            app:cardCornerRadius="4dp">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/card_reviews"
-                xmlns:card_view="http://schemas.android.com/apk/res-auto"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="5dp"
-                android:layout_marginEnd="5dp"
-                android:layout_marginBottom="5dp"
-                card_view:cardCornerRadius="4dp"
-                android:tag="1"
-                card_view:cardBackgroundColor="@color/colorGrayCardBackground">
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -554,11 +616,13 @@
                     android:orientation="horizontal">
 
                     <ImageButton
+                        android:id="@+id/reviews_image_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/cardview_light_background"
-                        android:src="@drawable/ic_comment_white"
-                        android:layout_gravity="center_vertical"/>
+                        android:backgroundTint="@color/colorGrayCardBackground"
+                        android:src="@drawable/chat"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginEnd="5dp"/>
 
                     <TextView
                         android:id="@+id/comments_number"
@@ -570,9 +634,43 @@
                         android:layout_gravity="center_vertical"/>
 
                 </LinearLayout>
+            </LinearLayout>
 
-            </androidx.cardview.widget.CardView>
-        </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cancel_card_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="@color/colorGrayCardBackground"
+            android:layout_marginTop="@dimen/margin_10dp"
+            app:cardCornerRadius="4dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_gravity="center_horizontal">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/cancel_text_view"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        style="@style/TextAppearance.AppCompat.Title"
+                        android:textSize="25dp"
+                        android:text="@string/cancel_upper_case"
+                        android:layout_gravity="center_vertical"/>
+
+                </LinearLayout>
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
 
