--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="star_size">60dp</dimen>
     <dimen name="margin_20dp">20dp</dimen>
     <dimen name="emoji_text_size">10sp</dimen>
+    <dimen name="rate_popup_subtitles_size">15sp</dimen>
 
 
 </resources>
