--- a/app/src/main/res/layout/book_readed_popup.xml
+++ b/app/src/main/res/layout/book_readed_popup.xml
@@ -330,7 +330,7 @@
                 android:layout_marginStart="@dimen/margin_10dp"
                 android:layout_marginEnd="@dimen/margin_10dp">
 
-                <LinearLayout
+                <!--<LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -339,7 +339,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="bottom|center_horizontal"
                         android:text="-"/>
-                </LinearLayout>
+                </LinearLayout>-->
 
                 <androidx.cardview.widget.CardView
                     xmlns:card_view="http://schemas.android.com/apk/res-auto"
