--- a/app/src/main/res/layout/reviews_layout.xml
+++ b/app/src/main/res/layout/reviews_layout.xml
@@ -84,7 +84,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/comments_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="500dp"
             android:layout_marginTop="15dp"
             android:layout_marginBottom="10dp"
             android:layout_marginStart="5dp"
