--- a/app/src/main/res/layout/reviews_layout.xml
+++ b/app/src/main/res/layout/reviews_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:tag="reviews_fragment"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -49,7 +50,7 @@
             android:layout_marginStart="5dp"
             android:layout_gravity="center_vertical"/>
 
-        <LinearLayout
+        <!--LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -65,31 +66,158 @@
                 android:layout_marginTop="@dimen/margin_10dp"
                 android:src="@drawable/ic_add_book"/>
 
-            <!--<com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/add_review_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/colorGrayCardBackground"
-                android:foregroundTint="@color/colorGrayCardBackground"
-                android:src="@drawable/ic_add_book" />-->
-        </LinearLayout>
+
+        </LinearLayout-->
     </LinearLayout>
 
+
     <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_below="@+id/linear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_10dp"
         android:layout_marginTop="@dimen/margin_10dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/comments_recyclerView"
+        <LinearLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="500dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginBottom="10dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginEnd="5dp"/>
+            android:layout_height="match_parent">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/comments_recyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="500dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="10dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"/>
+        </LinearLayout>
 
     </ScrollView>
 
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/comment_layout"
+        android:layout_alignParentBottom="true"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/margin_5dp"
+        android:layout_marginEnd="@dimen/margin_5dp"
+        android:layout_marginStart="@dimen/margin_5dp"
+        android:layout_marginBottom="@dimen/margin_5dp">
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorBlack"
+            app:cardCornerRadius="5dp">
+
+            <androidx.cardview.widget.CardView
+                android:layout_margin="1dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorDarkGrayCardBackground"
+                app:cardElevation="20dp"
+                app:cardCornerRadius="4dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_margin="@dimen/margin_5dp">
+
+                        <de.hdodenhof.circleimageview.CircleImageView
+                            android:id="@+id/profile_image"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:src="@drawable/user1"
+                            android:layout_centerHorizontal="true"
+                            app:civ_border_width="2dp"
+                            app:civ_border_color="#FFF"/>
+
+                        <TextView
+                            android:id="@+id/user_name"
+                            style="@style/TextAppearance.AppCompat.Title"
+                            android:layout_margin="@dimen/margin_5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/colorBlack"
+                            android:layout_gravity="center_vertical"
+                            android:textStyle="bold"/>
+                    </LinearLayout>
+
+                    <ScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <!--me.biubiubiu.justifytext.library.JustifyTextView
+                                android:layout_marginStart="@dimen/margin_5dp"
+                                android:layout_marginBottom="@dimen/margin_5dp"
+                                android:id="@+id/user_comment"
+                                android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorBlack"
+                                android:textSize="12dp"/-->
+                            <EditText
+                                android:gravity="center_horizontal"
+                                android:id="@+id/edit_text"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:hint="Añade un comentario"
+                                android:inputType="text"
+                                android:imeOptions="actionSend"
+                                android:layout_marginEnd="25dp"/>
+
+                            <ImageButton
+                                android:layout_marginStart="@dimen/margin_5dp"
+                                android:layout_alignEnd="@+id/edit_text"
+                                android:id="@+id/send_comment"
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                android:layout_marginEnd="@dimen/margin_5dp"
+                                android:layout_marginBottom="@dimen/margin_5dp"
+                                android:src="@drawable/send_arrow_icon"
+                                android:layout_alignParentEnd="true"
+                                android:layout_alignParentBottom="true"
+                                android:background="@color/colorDarkGrayCardBackground"/>
+
+
+                        </RelativeLayout>
+                    </ScrollView>
+
+                    <!--TextView
+                        android:id="@+id/user_comment"
+                        android:text="Este es un comentario de prueba pagado por Adobe Acrobar features."
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12dp"/-->
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+        </androidx.cardview.widget.CardView>
+
+
+
+    </LinearLayout>
+
+</RelativeLayout>
