--- a/app/src/main/res/layout/fragment_book_view.xml
+++ b/app/src/main/res/layout/fragment_book_view.xml
@@ -143,6 +143,7 @@
                                     android:gravity="center_horizontal"/>
 
                                 <ImageView
+                                    android:id="@+id/genre_icon"
                                     android:layout_width="30dp"
                                     android:layout_height="30dp"
                                     android:src="@drawable/mystery"
@@ -151,7 +152,7 @@
 
 
                                 <TextView
-                                    android:text="Nombre genero"
+                                    android:id="@+id/text_genre_name"
                                     style="@style/TextAppearance.AppCompat.Body1"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
@@ -203,7 +204,7 @@
 
 
                                 <TextView
-                                    android:text="1 octubre"
+                                    android:text="@string/fake_date"
                                     style="@style/TextAppearance.AppCompat.Body1"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
