--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -15,6 +15,6 @@
     <dimen name="margin_20dp">20dp</dimen>
     <dimen name="emoji_text_size">10sp</dimen>
     <dimen name="rate_popup_subtitles_size">15sp</dimen>
-
+    <dimen name="card_view_dimen">1dp</dimen>
 
 </resources>
